--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "gulp-clean": "^0.3.1",
     "gulp-compass": "^1.1.9",
     "gulp-concat-sourcemap": "^1.3.0",
+    "gulp-jshint": "^1.6.3",
     "gulp-minify-css": "^0.3.5",
     "gulp-notify": "^1.4.0",
     "gulp-rename": "^1.2.0",
-    "gulp-uglifyjs": "^0.3.0"
+    "gulp-uglifyjs": "^0.3.0",
+    "map-stream": "^0.1.0"
   }
 }
