--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp-clean": "^0.3.1",
     "gulp-compass": "^1.1.9",
     "gulp-concat-sourcemap": "^1.3.0",
+    "gulp-imagemin": "^0.6.1",
     "gulp-jshint": "^1.6.3",
     "gulp-minify-css": "^0.3.5",
     "gulp-notify": "^1.4.0",
