--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "gulp-jshint": "^1.6.3",
     "gulp-minify-css": "^0.3.5",
     "gulp-notify": "^1.4.0",
+    "gulp-plumber": "^0.6.3",
     "gulp-rename": "^1.2.0",
     "gulp-uglifyjs": "^0.3.0",
+    "gulp-watch": "^0.6.8",
     "map-stream": "^0.1.0"
   }
 }
