--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "devDependencies": {
-    "gulp": "^3.8.3",
-    "gulp-autoprefixer": "0.0.7",
+    "browser-sync": "^1.1.2",
+    "gulp": "^3.8.5",
+    "gulp-autoprefixer": "0.0.8",
     "gulp-clean": "^0.3.1",
     "gulp-compass": "^1.1.9",
     "gulp-concat-sourcemap": "^1.3.0",
     "gulp-imagemin": "^0.6.1",
-    "gulp-jshint": "^1.6.3",
-    "gulp-minify-css": "^0.3.5",
+    "gulp-include": "^0.2.3",
+    "gulp-jshint": "^1.6.4",
+    "gulp-minify-css": "^0.3.6",
     "gulp-notify": "^1.4.0",
     "gulp-plumber": "^0.6.3",
     "gulp-rename": "^1.2.0",
-    "gulp-uglifyjs": "^0.3.0",
+    "gulp-uglifyjs": "^0.4.2",
     "gulp-watch": "^0.6.8",
     "map-stream": "^0.1.0"
   }
