--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "gulp": "^3.8.7",
     "gulp-autoprefixer": "0.0.8",
     "gulp-clean": "^0.3.1",
-    "gulp-compass": "^1.3.0",
+    "gulp-compass": "1.2.0",
     "gulp-concat-sourcemap": "^1.3.1",
     "gulp-imagemin": "^1.0.0",
     "gulp-include": "^1.0.0",
