--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "browser-sync": "^1.3.5",
+    "browser-sync": "1.3.6",
     "gulp": "^3.8.7",
     "gulp-autoprefixer": "0.0.8",
     "gulp-clean": "^0.3.1",
