--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "devDependencies": {
-    "browser-sync": "1.3.6",
-    "gulp": "^3.8.7",
-    "gulp-compass": "1.2.0",
+    "browser-sync": "^1.3.7",
+    "gulp": "^3.8.8",
+    "gulp-compass": "^1.3.1",
     "gulp-concat-sourcemap": "^1.3.1",
-    "gulp-include": "^1.0.0",
+    "gulp-include": "^1.0.1",
     "gulp-jshint": "^1.8.4",
-    "gulp-notify": "^1.4.2",
-    "gulp-plumber": "^0.6.4",
+    "gulp-notify": "^1.6.0",
+    "gulp-plumber": "^0.6.5",
     "gulp-rename": "^1.2.0",
     "gulp-uglifyjs": "^0.4.2",
-    "gulp-watch": "^0.6.9",
+    "gulp-watch": "^1.0.5",
     "map-stream": "^0.1.0"
   }
 }
