--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "devDependencies": {
-    "browser-sync": "^1.3.7",
+    "browser-sync": "1.3.6",
     "gulp": "^3.8.8",
-    "gulp-compass": "^1.3.1",
+    "gulp-compass": "1.2.0",
     "gulp-concat-sourcemap": "^1.3.1",
     "gulp-include": "^1.0.1",
     "gulp-jshint": "^1.8.4",
