--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "devDependencies": {
-    "browser-sync": "1.3.6",
-    "gulp": "^3.8.7",
-    "gulp-autoprefixer": "0.0.8",
+    "browser-sync": "^1.3.6",
+    "gulp": "^3.8.8",
+    "gulp-autoprefixer": "^1.0.1",
     "gulp-clean": "^0.3.1",
-    "gulp-compass": "1.2.0",
+    "gulp-compass": "^1.2.0",
     "gulp-concat-sourcemap": "^1.3.1",
-    "gulp-imagemin": "^1.0.0",
-    "gulp-include": "^1.0.0",
+    "gulp-imagemin": "^1.0.1",
+    "gulp-include": "^1.0.1",
     "gulp-jshint": "^1.8.4",
-    "gulp-minify-css": "^0.3.7",
-    "gulp-notify": "^1.4.2",
-    "gulp-plumber": "^0.6.4",
+    "gulp-minify-css": "^0.3.10",
+    "gulp-notify": "^1.8.0",
+    "gulp-plumber": "^0.6.5",
     "gulp-rename": "^1.2.0",
-    "gulp-uglifyjs": "^0.4.2",
-    "gulp-watch": "^0.6.9",
-    "imagemin-pngcrush": "^0.1.0",
+    "gulp-rimraf": "^0.1.0",
+    "gulp-uglifyjs": "^0.4.3",
+    "gulp-watch": "^1.0.7",
+    "imagemin-pngcrush": "^1.0.0",
     "map-stream": "^0.1.0"
   }
 }
