--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "devDependencies": {
-    "browser-sync": "^1.3.6",
-    "gulp": "^3.8.8",
-    "gulp-autoprefixer": "^1.0.1",
-    "gulp-clean": "^0.3.1",
-    "gulp-compass": "^1.2.0",
-    "gulp-concat-sourcemap": "^1.3.1",
-    "gulp-imagemin": "^1.0.1",
-    "gulp-include": "^1.0.1",
-    "gulp-jshint": "^1.8.4",
-    "gulp-minify-css": "^0.3.10",
-    "gulp-notify": "^1.8.0",
-    "gulp-plumber": "^0.6.5",
-    "gulp-rename": "^1.2.0",
-    "gulp-uglifyjs": "^0.4.3",
-    "gulp-watch": "^1.0.7",
-    "imagemin-pngcrush": "^1.0.0",
-    "map-stream": "^0.1.0"
+    "browser-sync": "1.5.1",
+    "gulp": "3.8.8",
+    "gulp-autoprefixer": "1.0.1",
+    "gulp-clean": "0.3.1",
+    "gulp-compass": "1.2.0",
+    "gulp-concat-sourcemap": "1.3.1",
+    "gulp-imagemin": "1.0.1",
+    "gulp-include": "1.0.1",
+    "gulp-jshint": "1.8.4",
+    "gulp-minify-css": "0.3.10",
+    "gulp-notify": "1.8.0",
+    "gulp-plumber": "0.6.5",
+    "gulp-rename": "1.2.0",
+    "gulp-uglifyjs": "0.4.3",
+    "gulp-watch": "1.0.7",
+    "imagemin-pngcrush": "1.0.0",
+    "map-stream": "0.1.0"
   }
 }
