--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "gulp-notify": "1.8.0",
     "gulp-plumber": "0.6.5",
     "gulp-rename": "1.2.0",
-    "gulp-uglifyjs": "0.4.3",
-    "gulp-watch": "1.0.7",
+    "gulp-sass": "1.1.0",
+    "gulp-uglify": "1.0.2",
+    "gulp-watch": "1.1.0",
     "imagemin-pngcrush": "1.0.0",
     "map-stream": "0.1.0"
   }
