--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "browser-sync": "1.5.1",
-    "gulp": "3.8.8",
+    "gulp": "~3.8.10",
     "gulp-autoprefixer": "1.0.1",
     "gulp-clean": "0.3.1",
     "gulp-compass": "1.2.0",
